# NepalJourney

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  config.py  main.py  pyproject.toml
api/agents/: translation.py  yatra.py
api/db/: client.py
api/db/migrations/: 001_initial_schema.sql  002_auth_triggers.sql  003_audit_and_hardening.sql  004_push_tokens.sql
api/db/seeds/: 001_routes.sql
api/middleware/: logging.py  rate_limit.py  request_id.py
api/routers/: admin.py  auth.py  bookings.py  chat.py  guides.py  tracking.py  translate.py
api/tests/: conftest.py  test_yatra.py
api/tools/: email.py  guide_cache.py  guide_match.py  llm_retry.py  ntb_verify.py  push.py  sos_dispatch.py  weather.py
apps/guide/: .env.example  app.json  package.json
apps/guide/app/: _layout.tsx
apps/guide/app/(tabs)/: _layout.tsx  bookings.tsx  earnings.tsx  index.tsx
apps/guide/app/auth/: otp.tsx  welcome.tsx
apps/guide/src/api/: client.ts
apps/guide/src/lib/: session.ts  supabase.ts
apps/guide/src/screens/: BookingsScreen.tsx  ChatScreen.tsx  EarningsScreen.tsx  OtpScreen.tsx  ProfileScreen.tsx  WelcomeScreen.tsx
apps/mobile/: .env.example  app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx
apps/mobile/app/(tabs)/: _layout.tsx  bookings.tsx  index.tsx  (+2 more)
apps/web/: .env.example  next.config.js  package.json  tailwind.config.js  tsconfig.json
docs/: ARCHITECTURE.md  AUTH.md  BOOKING_FLOW.md  DATABASE.md  GUIDE_ONBOARDING.md  ROADMAP.md  SCALABILITY.md  YATRA.md
(+28 files in other folders)
