[tool.poetry]
name = "nepal-journey-api"
version = "0.1.0"
description = "Nepal Journey AI backend - AI agent orchestration, bookings, tracking, and government dashboard data API"
authors = ["Nepal Journey AI"]
packages = [{ include = "*", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
supabase = "^2.3.4"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
langgraph = "^0.0.26"
langchain-core = "^0.1.23"
langchain-anthropic = "^0.1.4"
anthropic = "^0.18.1"
openai = "^1.12.0"
redis = "^5.0.1"
httpx = "^0.26.0"
python-multipart = "^0.0.7"
python-dotenv = "^1.0.1"
structlog = "^24.1.0"
sentry-sdk = { extras = ["fastapi"], version = "^1.40.4" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.4"
pytest-mock = "^3.12.0"
ruff = "^0.1.15"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
